--- a/static/signup.css
+++ b/static/signup.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     height: 100vh;
-    background: #673AB7;
+    background-color: #9B8CD8;
 }
 
 .signup {
@@ -14,7 +14,8 @@
     height: 30%;
     min-height: 200px;
     align-self: center;
-    background: white;
+    background-color: #FFFFFF;
+    border: 1px solid #000000;
     padding: 32px;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
@@ -35,7 +36,7 @@
     font-size: 1rem;
     color: white;
     padding: 8px;
-    background-color: #009688;
+    background-color: #5aa55c;
     border: none;
     cursor: pointer;
     border-radius: 2px;
