--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
+{% load static %}
+{% include "header.html" %}
+<link rel="stylesheet" type="text/css" href="{% static 'login.css' %}"/>
     <title>Home</title>
+    <div class="post-container">
+        {% for post in posts %}
+            <div class="post">
+                <div class="post__title">{{post.title}} - {{post.user}}</div>
+                <div class="post__content">
+                    {{ post.content }}
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
-
-
